kube-deployment-files/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
spec:
  selector:
    app: mongo-db
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
spec:
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo-db
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/mongo-db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: mongo-db-pvc
