kube-deployment-files/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mongo-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: node-app
      ports:
        - port: 27017
